messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-blue  # initially sends traffic to blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
